Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56206

Some pages don't load with QtWebEngine (ERR_SSL_CLIENT_AUTH_CERT_NEEDED)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.2
    • 5.7.0
    • WebEngine
    • None
    • Archlinux

      When loading https://milibib.missing-link.de/ or https://paste.debian.net/ with QtWebEngine with Qt 5.7, they don't load, showing "ERR_SSL_CLIENT_AUTH_CERT_NEEDED".

      In Chromium 53.0.2785.116 they load without any issues, without a client certificate.

        For Gerrit Dashboard: QTBUG-56206
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes