Fix sites with optional client certificate support

We fail to load pages that supports client certificates because we
didn't implement the client certificate selection.

This patch makes a small implementation that selects no certificate
whenever a client certificate is requested.

Task-number: QTBUG-56206
Change-Id: I95394d9664c7e8e4d03d9e63e5043da81e2672a4
Reviewed-by: Michael Brüning <michael.bruning@qt.io>